--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -47,7 +47,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 {% block body %}
-{% endblock body%}
+{% endblock %}
 <script src="{% static 'js/jquery.js' %}"></script>
 <script src="{% static 'plugin/bootstrap-3.4.1-dist/js/bootstrap.min.js' %}"></script>
 {% block js %}{% endblock %}
